--- a/test.ipynb
+++ b/test.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,6 +158,7 @@
     "    p = os.path.join(home_dir, \"Documents/after_graduate2/preprocess/flat_filt/crop_ver\")\n",
     "    for f in glob.glob(p+\"/bin_\"+str(num_bin)+\"flat_\"+filt+\".fit\"):\n",
     "        result = fits.open(f)\n",
+    "        print(f)\n",
     "        result = result[0].data\n",
     "    return result\n",
     "def flat_cor(filt, data, num_bin, startH, startV):\n",
@@ -166,26 +167,7 @@
     "    startV = startV // num_bin\n",
     "    startH = startH // num_bin\n",
     "\n",
-    "    if filt == \"b\":\n",
-    "        data = data[0//num_bin:1022//num_bin,70//num_bin:1014//num_bin]\n",
-    "    elif filt == \"v\":\n",
-    "        data = data[0//num_bin:1022//num_bin,8//num_bin:1014//num_bin]\n",
-    "    else:\n",
-    "        data = data[0//num_bin:1022//num_bin,:]\n",
-    "    if filt ==\"p\" or filt == \"w\":\n",
-    "        result = data / flat_im[startV : startV + data.shape[0], startH : startH + data.shape[1]]\n",
-    "    elif filt == \"b\":\n",
-    "        if startH > 70:\n",
-    "            startH = startH - (70 // num_bin)\n",
-    "        result = data / flat_im[startV : startV + data.shape[0], startH : startH + data.shape[1]]\n",
-    "    elif filt == \"v\":\n",
-    "        if startH > 8:\n",
-    "            startH = startH - (8 // num_bin)\n",
-    "        result = data / flat_im[startV : startV + data.shape[0], startH : startH + data.shape[1]]\n",
-    "    else:\n",
-    "        result = data / flat_im[startV : startV + data.shape[0], startH : startH + data.shape[1]]\n",
-    "    \n",
-    "    result[np.isinf(result)] = 0\n",
+    "    result = data / flat_im[startV:startV + data.shape[0], startH : startH + data.shape[1]]\n",
     "    return result"
    ]
   },
@@ -204,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,41 +216,44 @@
     "    filt = header[\"FILTER_0\"]\n",
     "    tEXP = header[\"EXP_0\"]\n",
     "    num_bin = header[\"BINNING\"]\n",
-    "    status = check_need_smear(path)\n",
-    "    if(status == 0):\n",
-    "        bias = bias_cor(DAY)\n",
-    "        bias_data = data - bias\n",
-    "        data = smear_cor(bias_data, ys, xs, tEXP, bias)\n",
-    "    # print(data[145][135])\n",
-    "    flat_data = flat_cor(filt, data, num_bin, startH, startV)\n",
-    "    # print(flat_data[145][135])\n",
-    "    scattered_data = scattered_light(flat_data, filt)\n",
-    "    # print(scattered_data[145][135])\n",
-    "    result = DN2ref(filt, scattered_data)\n",
+    "    global pre_filt\n",
+    "    if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and pre_filt == \"b\"):\n",
+    "        status = check_need_smear(path)\n",
+    "        if(status == 0):\n",
+    "            bias = bias_cor(DAY)\n",
+    "            bias_data = data - bias\n",
+    "            data = smear_cor(bias_data, ys, xs, tEXP, bias)\n",
+    "        # print(data[145][135])\n",
+    "        flat_data = flat_cor(filt, data, num_bin, startH, startV)\n",
+    "        # print(flat_data[145][135])\n",
+    "        # scattered_data = scattered_light(flat_data, filt)\n",
+    "        # print(scattered_data[145][135])\n",
+    "        # result = DN2ref(filt, scattered_data)\n",
     "\n",
-    "    target_dir = (\"before_ref\")\n",
-    "    target_path = Path(target_dir)\n",
-    "    target_path.mkdir(exist_ok=True)\n",
-    "    os.chdir(\"./before_ref\")\n",
-    "    name = f\"cor{status}_st_{parts[1]}\"\n",
-    "    print(f\"st_{parts[1]}  done\")\n",
-    "    #hdu = fits.PrimaryHDU(flat_data)\n",
-    "    hdu = fits.PrimaryHDU(scattered_data)\n",
-    "    hdu.header['EXP_0']=tEXP\n",
-    "    hdulist = fits.HDUList([hdu])\n",
-    "    hdulist.writeto(name, overwrite=True)\n",
+    "        target_dir = (\"before_ref\")\n",
+    "        target_path = Path(target_dir)\n",
+    "        target_path.mkdir(exist_ok=True)\n",
+    "        os.chdir(\"./before_ref\")\n",
+    "        name = f\"bef_scacor{status}_st_{parts[1]}\"\n",
+    "        print(f\"st_{parts[1]}  done\")\n",
+    "        hdu = fits.PrimaryHDU(flat_data)\n",
+    "        # hdu = fits.PrimaryHDU(scattered_data)\n",
+    "        hdu.header['EXP_0']=tEXP\n",
+    "        hdulist = fits.HDUList([hdu])\n",
+    "        hdulist.writeto(name, overwrite=True)\n",
+    "        pre_filt = filt\n",
     "\n",
-    "    os.chdir(\"..\")\n",
+    "        os.chdir(\"..\")\n",
     "\n",
-    "    # target_dir = (\"after_ref\")\n",
-    "    # target_path = Path(target_dir)\n",
-    "    # target_path.mkdir(exist_ok=True)\n",
-    "    # os.chdir(\"./after_ref\")\n",
-    "    # hdu = fits.PrimaryHDU(result)\n",
-    "    # hdulist = fits.HDUList([hdu])\n",
-    "    # hdulist.writeto(name, overwrite=True)\n",
+    "        # target_dir = (\"after_ref\")\n",
+    "        # target_path = Path(target_dir)\n",
+    "        # target_path.mkdir(exist_ok=True)\n",
+    "        # os.chdir(\"./after_ref\")\n",
+    "        # hdu = fits.PrimaryHDU(result)\n",
+    "        # hdulist = fits.HDUList([hdu])\n",
+    "        # hdulist.writeto(name, overwrite=True)\n",
     "\n",
-    "    # os.chdir(\"..\")\n",
+    "        # os.chdir(\"..\")\n",
     "    "
    ]
   },
@@ -353,30 +338,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "st_2385540425_ul.fit  start\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-18526b537d52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mimage_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"20050917\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*.fit'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnatural_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mpre_correction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-35-6ccd65eac6dc>\u001b[0m in \u001b[0;36mpre_correction\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mflat_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflat_cor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_bin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstartH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstartV\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;31m# print(flat_data[145][135])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0mscattered_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscattered_light\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflat_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m     \u001b[0;31m# print(scattered_data[145][135])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDN2ref\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscattered_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-eec834d8d4ae>\u001b[0m in \u001b[0;36mscattered_light\u001b[0;34m(data, filt)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfufoc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2257\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2258\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2259\u001b[0;31m     return _wrapreduction(a, np.add, 'sum', axis, dtype, out, keepdims=keepdims,\n\u001b[0m\u001b[1;32m   2260\u001b[0m                           initial=initial, where=where)\n\u001b[1;32m   2261\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     84\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mpasskwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mufunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mpasskwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "st_2385540425_ul.fit  start\n",
+      "st_2385559680_b.fit  start\n",
+      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_b.fit\n",
+      "st_2385559680_b.fit  done\n",
+      "st_2385578902_v.fit  start\n",
+      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_v.fit\n",
+      "st_2385578902_v.fit  done\n",
+      "st_2385598109_w.fit  start\n",
+      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_w.fit\n",
+      "st_2385598109_w.fit  done\n",
+      "st_2385617364_x.fit  start\n",
+      "st_2385636586_zs.fit  start\n",
+      "st_2385655809_p.fit  start\n",
+      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_p.fit\n",
+      "st_2385655809_p.fit  done\n",
+      "st_2385718087_v.fit  start\n",
+      "st_2385746890_v.fit  start\n",
+      "st_2385775677_v.fit  start\n",
+      "st_2385806408_v.fit  start\n",
+      "st_2385835211_v.fit  start\n",
+      "st_2385864015_v.fit  start\n"
      ]
     }
    ],
@@ -1470,6 +1459,66 @@
     "z = np.zeros((ay, ax))\n",
     "df = pd.DataFrame(a)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def check(path):\n",
+    "    global pre_filt \n",
+    "    hdu = fits.open(path)[0]\n",
+    "    filt = hdu.header[\"FILTER_0\"]\n",
+    "\n",
+    "    if filt == \"v\" and pre_filt == \"b\":\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n",
+    "    pre_filt = filt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no\n",
+      "no\n",
+      "yes\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n",
+      "no\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "test_dir = \"../../HAY_A_AMICA_3_HAYAMICA_V1_0/data/\"\n",
+    "save_dir = \"test\"\n",
+    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")\n",
+    "path = Path(save_dir)\n",
+    "path.mkdir(exist_ok=True)\n",
+    "os.chdir(save_dir)\n",
+    "image_files = sorted(glob.glob(os.path.join(test_dir, \"20050917\", '*.fit')), key = natural_keys)\n",
+    "for i in range(len(image_files)):\n",
+    "    check(image_files[i])\n",
+    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")"
    ]
   }
  ],
