--- a/bias.ipynb
+++ b/bias.ipynb
@@ -153,6 +153,15 @@
     "\n",
     "print(\"1000以上の値を持つ要素の平均:\", average_above_1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fits.getdata(\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051017/st_2468186849_p.fit\")\n"
+   ]
   }
  ],
  "metadata": {
