--- a/test.ipynb
+++ b/test.ipynb
@@ -38,7 +38,7 @@
     "    status = 0\n",
     "    parts = path.split(\"st_\")\n",
     "    search_string = f\"st_{parts[1]}\"\n",
-    "    file_name = \"../../check.txt\"\n",
+    "    file_name = \"../check.txt\"\n",
     "\n",
     "    # ファイル全体を一度に読み込む\n",
     "    with open(file_name, 'r') as file:\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,6 @@
     "    p = os.path.join(home_dir, \"Documents/after_graduate2/preprocess/flat_filt/crop_ver\")\n",
     "    for f in glob.glob(p+\"/bin_\"+str(num_bin)+\"flat_\"+filt+\".fit\"):\n",
     "        result = fits.open(f)\n",
-    "        print(f)\n",
     "        result = result[0].data\n",
     "    return result\n",
     "def flat_cor(filt, data, num_bin, startH, startV):\n",
@@ -166,7 +165,6 @@
     "    flat_im = get_flat(filt, num_bin)\n",
     "    startV = startV // num_bin\n",
     "    startH = startH // num_bin\n",
-    "\n",
     "    result = data / flat_im[startV:startV + data.shape[0], startH : startH + data.shape[1]]\n",
     "    return result"
    ]
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,17 +215,18 @@
     "    tEXP = header[\"EXP_0\"]\n",
     "    num_bin = header[\"BINNING\"]\n",
     "    global pre_filt\n",
+    "    # pre_filt = 1\n",
     "    if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and pre_filt == \"b\"):\n",
     "        status = check_need_smear(path)\n",
     "        if(status == 0):\n",
     "            bias = bias_cor(DAY)\n",
     "            bias_data = data - bias\n",
     "            data = smear_cor(bias_data, ys, xs, tEXP, bias)\n",
-    "        # print(data[145][135])\n",
+    "        # print(f\"original or bias : {data[135][129]}\")\n",
     "        flat_data = flat_cor(filt, data, num_bin, startH, startV)\n",
-    "        # print(flat_data[145][135])\n",
+    "        # print(f\"flat_data : {flat_data[135][129]}\")\n",
     "        # scattered_data = scattered_light(flat_data, filt)\n",
-    "        # print(scattered_data[145][135])\n",
+    "        # print(f\"scattered_data : {scattered_data[135][129]}\")\n",
     "        # result = DN2ref(filt, scattered_data)\n",
     "\n",
     "        target_dir = (\"before_ref\")\n",
@@ -237,6 +236,7 @@
     "        name = f\"bef_scacor{status}_st_{parts[1]}\"\n",
     "        print(f\"st_{parts[1]}  done\")\n",
     "        hdu = fits.PrimaryHDU(flat_data)\n",
+    "        # name = f\"cor{status}_st_{parts[1]}\"\n",
     "        # hdu = fits.PrimaryHDU(scattered_data)\n",
     "        hdu.header['EXP_0']=tEXP\n",
     "        hdulist = fits.HDUList([hdu])\n",
@@ -255,6 +255,48 @@
     "\n",
     "        # os.chdir(\"..\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "st_2467348679_v.fit  start\n",
+      "st_2467809534_v.fit  start\n",
+      "st_2468166634_v.fit  start\n",
+      "st_2468169379_ul.fit  start\n",
+      "st_2468172304_b.fit  start\n",
+      "st_2468172304_b.fit  done\n",
+      "st_2468175197_v.fit  start\n",
+      "st_2468175197_v.fit  done\n",
+      "st_2468178122_w.fit  start\n",
+      "st_2468178122_w.fit  done\n",
+      "st_2468181047_x.fit  start\n",
+      "st_2468183940_zs.fit  start\n",
+      "st_2468186849_p.fit  start\n",
+      "st_2468186849_p.fit  done\n",
+      "st_2468500763_v.fit  start\n",
+      "st_2469429773_b.fit  start\n",
+      "st_2469429773_b.fit  done\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dir = \"../../HAY_A_AMICA_3_HAYAMICA_V1_0/data/\"\n",
+    "save_dir = \"test\"\n",
+    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")\n",
+    "path = Path(save_dir)\n",
+    "path.mkdir(exist_ok=True)\n",
+    "os.chdir(save_dir)\n",
+    "image_files = sorted(glob.glob(os.path.join(test_dir, \"20051017\", '*.fit')), key = natural_keys)\n",
+    "for i in range(len(image_files)):\n",
+    "    pre_correction(image_files[i])\n",
+    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")"
    ]
   },
   {
@@ -334,52 +376,6 @@
     "        pre_correction(f)\n",
     "    os.chdir(\"..\")\n",
     "os.chdir(original_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "st_2385540425_ul.fit  start\n",
-      "st_2385559680_b.fit  start\n",
-      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_b.fit\n",
-      "st_2385559680_b.fit  done\n",
-      "st_2385578902_v.fit  start\n",
-      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_v.fit\n",
-      "st_2385578902_v.fit  done\n",
-      "st_2385598109_w.fit  start\n",
-      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_w.fit\n",
-      "st_2385598109_w.fit  done\n",
-      "st_2385617364_x.fit  start\n",
-      "st_2385636586_zs.fit  start\n",
-      "st_2385655809_p.fit  start\n",
-      "/Users/hattoriakihiro/Documents/after_graduate2/preprocess/flat_filt/crop_ver/bin_1flat_p.fit\n",
-      "st_2385655809_p.fit  done\n",
-      "st_2385718087_v.fit  start\n",
-      "st_2385746890_v.fit  start\n",
-      "st_2385775677_v.fit  start\n",
-      "st_2385806408_v.fit  start\n",
-      "st_2385835211_v.fit  start\n",
-      "st_2385864015_v.fit  start\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_dir = \"../../HAY_A_AMICA_3_HAYAMICA_V1_0/data/\"\n",
-    "save_dir = \"test\"\n",
-    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")\n",
-    "path = Path(save_dir)\n",
-    "path.mkdir(exist_ok=True)\n",
-    "os.chdir(save_dir)\n",
-    "image_files = sorted(glob.glob(os.path.join(test_dir, \"20050917\", '*.fit')), key = natural_keys)\n",
-    "for i in range(len(image_files)):\n",
-    "    pre_correction(image_files[i])\n",
-    "os.chdir(\"/Users/hattoriakihiro/Documents/after_graduate2/preprocess/\")\n"
    ]
   },
   {
