--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -49,21 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../preprocess/test/before_ref/bef_scacor1_st_2385559680_b.fit\n",
-      "(700, 700)\n",
-      "../preprocess//test/before_ref/bef_scacor1_st_2385578902_v.fit\n",
-      "(700, 700)\n",
-      "../preprocess/test/before_ref/bef_scacor1_st_2385598109_w.fit\n",
-      "(700, 700)\n",
-      "../preprocess/test/before_ref/bef_scacor1_st_2385655809_p.fit\n",
-      "(700, 700)\n",
+      "../preprocess/test/before_ref/bef_scacor1_st_2451086681_b.fit\n",
+      "(128, 128)\n",
+      "../preprocess/test/before_ref/bef_scacor1_st_2451090553_v.fit\n",
+      "(128, 128)\n",
+      "../preprocess/test/before_ref/bef_scacor1_st_2451094410_w.fit\n",
+      "(128, 128)\n",
+      "../preprocess/test/before_ref/bef_scacor1_st_2451098282_p.fit\n",
+      "(128, 128)\n",
       "[0.131, 0.087, 0.0655, 0.174]\n"
      ]
     }
@@ -81,31 +81,65 @@
     "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2489439885_p.fit\"]        #test\n",
     "\n",
     "\n",
+    "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450856292_b.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450860165_v.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450864005_w.fit\",\n",
+    "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450867894_p.fit\"]  #ishiguro2010\n",
+    "\n",
     "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450510529_b.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450514369_v.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450518275_w.fit\",\n",
     "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2450529877_p.fit\"]  #ishiguro2010\n",
     "\n",
+    "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451086681_b.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451090553_v.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451094410_w.fit\",\n",
+    "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451098282_p.fit\"]  #ishiguro2010\n",
     "\n",
+    "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451547456_b.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451551346_v.fit\",\n",
+    "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451555202_w.fit\",\n",
+    "#                  \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051011/st_2451559075_p.fit\"]  #ishiguro2010\n",
+    " \n",
     "# image_files = [\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490234689_b.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490238562_v.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490242451_w.fit\",\n",
     "#                \"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20051025/st_2490246307_p.fit\"]\n",
     "\n",
-    "# image_files = [\"../preprocess_original/test/after_ref/cor1_st_2489428266_b.fit\",\n",
-    "#                \"../preprocess_original/test/after_ref/cor1_st_2489432123_v.fit\",\n",
-    "#                \"../preprocess_original/test/after_ref/cor1_st_2489436012_w.fit\",\n",
-    "#                \"../preprocess_original/test/after_ref/cor1_st_2489439885_p.fit\"]\n",
+    "# image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2489428266_b.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2489432123_v.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2489436012_w.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2489439885_p.fit\"]\n",
     "\n",
     "# image_files = [\"../preprocess/test/before_ref/cor1_st_2489428266_b.fit\",\n",
     "#                \"../preprocess//test/before_ref/cor1_st_2489432123_v.fit\",\n",
     "#                \"../preprocess/test/before_ref/cor1_st_2489436012_w.fit\",\n",
     "#                \"../preprocess/test/before_ref/cor1_st_2489439885_p.fit\"]\n",
     "\n",
-    "image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2385559680_b.fit\",\n",
-    "               \"../preprocess//test/before_ref/bef_scacor1_st_2385578902_v.fit\",\n",
-    "               \"../preprocess/test/before_ref/bef_scacor1_st_2385598109_w.fit\",\n",
-    "               \"../preprocess/test/before_ref/bef_scacor1_st_2385655809_p.fit\"]     #ishiguro2014\n",
+    "# image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2385559680_b.fit\",\n",
+    "#                \"../preprocess//test/before_ref/bef_scacor1_st_2385578902_v.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2385598109_w.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2385655809_p.fit\"]     #ishiguro2014\n",
+    "\n",
+    "# image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2450856292_b.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2450860165_v.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2450864005_w.fit\",\n",
+    "#                  \"../preprocess/test/before_ref/bef_scacor1_st_2450867894_p.fit\"]  #ishiguro2010\n",
+    "\n",
+    "# image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2450510529_b.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2450514369_v.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2450518275_w.fit\",\n",
+    "#                  \"../preprocess/test/before_ref/bef_scacor1_st_2450529877_p.fit\"]  #ishiguro2010\n",
+    "\n",
+    "image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2451086681_b.fit\",\n",
+    "               \"../preprocess/test/before_ref/bef_scacor1_st_2451090553_v.fit\",\n",
+    "               \"../preprocess/test/before_ref/bef_scacor1_st_2451094410_w.fit\",\n",
+    "                 \"../preprocess/test/before_ref/bef_scacor1_st_2451098282_p.fit\"]  #ishiguro2010\n",
+    "\n",
+    "# image_files = [\"../preprocess/test/before_ref/bef_scacor1_st_2451547456_b.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2451551346_v.fit\",\n",
+    "#                \"../preprocess/test/before_ref/bef_scacor1_st_2451555202_w.fit\",\n",
+    "#                  \"../preprocess/test/before_ref/bef_scacor1_st_2451559075_p.fit\"]\n",
     "\n",
     "# 出力ディレクトリとファイル名のプレフィックスを指定\n",
     "home_dir = os.path.expanduser(\"~\")\n",
@@ -164,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +232,7 @@
     "    # 変換行列を適用して画像を基準画像の座標系に変換\n",
     "    registered_image = cv2.warpAffine(images_uint16[i], M, (image_file.shape[1], image_file.shape[0]), flags=cv2.INTER_NEAREST)\n",
     "    registered_png= cv2.warpAffine(image_file, M, (image_file.shape[1], image_file.shape[0]), flags=cv2.INTER_NEAREST)\n",
-    "    # registered_image[(registered_image <= 1000) | (registered_image >= 5000)] = 0\n",
+    "    registered_image[(registered_image <= 1000) | (registered_image >= 5000)] = 0\n",
     "    registered_images.append(registered_image)\n",
     "\n",
     "for i in range(len(registered_images)):\n",
