--- a/make_bin.ipynb
+++ b/make_bin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +242,7 @@
     "    print(filt)\n",
     "    data = fits.getdata(flat_file)\n",
     "    contains_zero = (data == 0).any()\n",
+    "    # data[data < 0.01] = 100000\n",
     "    if contains_zero:\n",
     "        data[data==0] = 100000\n",
     "        a = pd.DataFrame(data)\n",
@@ -277,12 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat = fits.getdata(\"./flat_filt/crop_ver/bin_1flat_b.fit\")\n",
-    "a = fits.open(\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050917/st_2385559680_b.fit\")\n",
+    "flat = fits.getdata(\"./flat_filt/crop_ver/bin_1flat_p.fit\")\n",
+    "a = fits.open(\"../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050917/st_2385655809_p.fit\")\n",
     "header = a[0].header\n",
     "data = a[0].data\n",
     "startH = header[\"START_H\"]\n",
@@ -291,14 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "flat = pd.DataFrame(flat)\n",
     "crop = flat.iloc[startV : startV + data.shape[0], startH : startH + data.shape[1]].values\n",
-    "crop[294][337]\n",
-    "fits.writeto(\"crop_flat.fit\", crop)"
+    "fits.writeto(\"crop_flat_p.fit\", crop)"
    ]
   },
   {
