--- a/make_spectrum.ipynb
+++ b/make_spectrum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,24 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import glob\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_images(image_files, batch_size):\n",
+    "    return [image_files[i:i + batch_size] for i in range(0, len(image_files), batch_size)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,13 +57,12 @@
     "    for i in range (4):\n",
     "        bef_ref.append(((bef_data[i] /t[i]) / bef_base) * scale_factor[i] )\n",
     "        af_ref.append(((af_data[i] /t[i]) / af_base) * scale_factor[i] )\n",
-    "\n",
     "    return bef_ref, af_ref\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +77,160 @@
     "        header = hdu.header\n",
     "        data.append(hdu.data)\n",
     "        t.append(header[\"EXP_0\"])\n",
+    "    n = image_filelist[0].split(\"/registration\")\n",
+    "    name = n[0]\n",
+    "    save_dir = f\"{name}/reflectance\"\n",
+    "    print(save_dir)\n",
+    "    path = Path(save_dir)\n",
+    "    path.mkdir(exist_ok=True)\n",
     "    base = np.mean((data[1] / t[1])) * rad\n",
     "    for i in range(4):\n",
     "        print(np.mean(data[i] / t[i]))\n",
     "        result.append((np.mean((data[i] / t[i])) / base) * rad * scale_factor[i]) \n",
     "        # result.append(((data[i][y][x] / t[i]) / base)  )\n",
-    "    print(t)\n",
+    "    Rw_Rb = result[2] / result[0]\n",
+    "    print(result)\n",
+    "    fits.writeto(f\"{save_dir}/Rw_Rb_{num}.fits\", Rw_Rb, overwrite=True)\n",
     "    return result\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Rw_Rb(image_filelist, num):\n",
+    "    result = []\n",
+    "    data = []\n",
+    "    t = []\n",
+    "    scale_factor = [1.254, 1, 0.645, 1.514]\n",
+    "    rad = 3.42 * pow(10,-3)\n",
+    "    for i, image_file in enumerate(image_filelist):\n",
+    "        hdu = fits.open(image_file)[0]\n",
+    "        header = hdu.header\n",
+    "        data.append(hdu.data)\n",
+    "        t.append(header[\"EXP_0\"])\n",
+    "    n = image_filelist[0].split(\"/registration\")\n",
+    "    name = n[0]\n",
+    "    save_dir = f\"{name}/reflectance\"\n",
+    "    print(save_dir)\n",
+    "    path = Path(save_dir)\n",
+    "    path.mkdir(exist_ok=True)\n",
+    "    base = (data[1] / t[1]) * rad\n",
+    "    for i in range(4):\n",
+    "        result.append((((data[i] / t[i])) / base) * rad * scale_factor[i])\n",
+    "    Rw_Rb_data = result[2] / result[0]\n",
+    "    print(result)\n",
+    "    fits.writeto(f\"{save_dir}/Rw_Rb_{num}.fits\", Rw_Rb_data, overwrite=True)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../output_preprocess/20051024/reflectance\n",
+      "[array([[nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan]]), array([[nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan]]), array([[inf, inf, inf, ..., nan, nan, nan],\n",
+      "       [inf, inf, inf, ..., nan, nan, nan],\n",
+      "       [inf, inf, inf, ..., inf, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., inf, inf, inf],\n",
+      "       [nan, nan, nan, ..., inf, inf, inf],\n",
+      "       [nan, nan, nan, ..., inf, inf, inf]]), array([[nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan]])]\n",
+      "../output_preprocess/20051024/reflectance\n",
+      "[array([[0.8250829 , 0.85218661, 0.89261432, ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       [0.84441048, 0.84620107, 0.82733292, ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       [0.73330889, 0.79556292, 0.79189325, ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       ...,\n",
+      "       [       nan,        nan,        nan, ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       [       nan,        nan,        nan, ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       [       nan,        nan,        nan, ...,        nan,        nan,\n",
+      "               nan]]), array([[ 1.,  1.,  1., ..., nan, nan, nan],\n",
+      "       [ 1.,  1.,  1., ..., nan, nan, nan],\n",
+      "       [ 1.,  1.,  1., ..., nan, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan]]), array([[1.18342479, 1.1938578 , 1.1776423 , ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       [1.16658505, 1.15936703, 1.1743574 , ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       [1.18084722, 1.20198765, 1.19563397, ...,        nan,        nan,\n",
+      "               nan],\n",
+      "       ...,\n",
+      "       [       nan,        nan,        nan, ...,        inf,        inf,\n",
+      "               inf],\n",
+      "       [       nan,        nan,        nan, ...,        inf,        inf,\n",
+      "               inf],\n",
+      "       [       nan,        nan,        nan, ...,        inf,        inf,\n",
+      "               inf]]), array([[ 0.,  0.,  0., ..., nan, nan, nan],\n",
+      "       [ 0.,  0.,  0., ..., nan, nan, nan],\n",
+      "       [ 0.,  0.,  0., ..., nan, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., inf, inf, inf],\n",
+      "       [nan, nan, nan, ..., inf, inf, inf],\n",
+      "       [nan, nan, nan, ..., inf, inf, inf]])]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-54-d46de2769b45>:20: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  result.append((((data[i] / t[i])) / base) * rad * scale_factor[i])\n",
+      "<ipython-input-54-d46de2769b45>:20: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  result.append((((data[i] / t[i])) / base) * rad * scale_factor[i])\n",
+      "<ipython-input-54-d46de2769b45>:21: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Rw_Rb_data = result[2] / result[0]\n",
+      "<ipython-input-54-d46de2769b45>:21: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  Rw_Rb_data = result[2] / result[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_dir = \"20051024\"\n",
+    "image_dir = f\"../output_preprocess/{target_dir}/registration/\"\n",
+    "image_files = sorted(glob.glob(os.path.join(image_dir, \"*.fits\")))\n",
+    "\n",
+    "batch_size = 4\n",
+    "\n",
+    "image_batches = split_images(image_files, batch_size)\n",
+    "ref_data = []\n",
+    "# for i, image_file in enumerate(image_batches):\n",
+    "#     fits.open(image_file[0])\n",
+    "\n",
+    "for i in range(len(image_batches)):\n",
+    "    ref_data = Rw_Rb(image_batches[i], i)"
    ]
   },
   {
